--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,35 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".HomeActivity">
+        tools:context=".HomeActivity"
+        android:background="#581305">
 
+    <TextView
+            android:text="@string/accueil"
+            android:layout_width="248dp"
+            android:layout_height="63dp"
+            android:id="@+id/textView" android:textSize="52sp"
+            android:textAlignment="center" android:textStyle="bold"
+            android:textColor="@color/cardview_light_background" android:layout_marginTop="88dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintEnd_toEndOf="parent"/>
+    <Button
+            android:text="@string/creer_une_partie"
+            android:layout_width="305dp"
+            android:layout_height="77dp"
+            android:id="@+id/createButton" android:textStyle="bold"
+            android:textAlignment="center" android:textSize="24sp" android:layout_marginTop="100dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
+            app:layout_constraintHorizontal_bias="0.491"/>
+    <Button
+            android:text="@string/rejoindre"
+            android:layout_width="305dp"
+            android:layout_height="77dp"
+            android:id="@+id/joinButton" android:textStyle="bold"
+            android:textAlignment="center" android:textSize="24sp" android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/createButton"
+            app:layout_constraintStart_toStartOf="@+id/createButton"
+            app:layout_constraintEnd_toEndOf="@+id/createButton"
+            app:layout_constraintHorizontal_bias="1.0"/>
 </android.support.constraint.ConstraintLayout>
