--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -18,22 +18,44 @@
             app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:text="@string/nombre_de_joueurs"
-            android:layout_width="279dp"
-            android:layout_height="63dp"
+            android:layout_width="216dp"
+            android:layout_height="46dp"
             android:id="@+id/textView4" android:textStyle="bold"
             android:textAlignment="center" android:textColor="@color/cardview_light_background"
-            android:textSize="24sp" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="@+id/editText" android:layout_marginTop="56dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText"/>
+            android:textSize="24sp"
+            android:layout_marginTop="44dp"
+            app:layout_constraintTop_toBottomOf="@+id/textPersonName" android:layout_marginStart="4dp"
+            app:layout_constraintStart_toStartOf="parent"/>
     <EditText
             android:layout_width="313dp"
             android:layout_height="64dp"
             android:inputType="textLongMessage|textPersonName"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/textPersonName"
             android:textColor="@color/cardview_light_background"
             android:hint="@string/nom_de_la_partie"
             android:layout_marginTop="76dp"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView3"/>
+    <TextView
+            android:layout_width="27dp"
+            android:layout_height="38dp"
+            android:id="@+id/nbPlayerView" android:text="5"
+            android:textSize="24sp" android:textStyle="bold" android:textColor="@color/cardview_light_background"
+            app:layout_constraintStart_toEndOf="@+id/removePlayerButton" android:layout_marginStart="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/removePlayerButton"
+            app:layout_constraintTop_toTopOf="@+id/removePlayerButton" app:layout_constraintVertical_bias="1.0"/>
+    <ImageButton
+            android:layout_width="33dp"
+            android:layout_height="36dp" app:srcCompat="@android:drawable/ic_input_add"
+            android:id="@+id/addPlayerButton"
+            app:layout_constraintTop_toTopOf="@+id/nbPlayerView"
+            app:layout_constraintBottom_toBottomOf="@+id/nbPlayerView"
+            app:layout_constraintStart_toEndOf="@+id/nbPlayerView" android:layout_marginStart="8dp"/>
+    <ImageButton
+            android:layout_width="36dp"
+            android:layout_height="39dp" app:srcCompat="@android:drawable/button_onoff_indicator_on"
+            android:id="@+id/removePlayerButton"
+            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView4" app:layout_constraintTop_toTopOf="@+id/textView4"/>
 </android.support.constraint.ConstraintLayout>
