--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,17 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SignUpActivity">
+        tools:context=".SignUpActivity"
+        android:background="@color/colorBackground">
+    <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="60dp" app:srcCompat="@android:drawable/ic_menu_revert"
+            android:background="@color/colorBackground" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0" android:scaleType="fitCenter"
+            android:id="@+id/returnSignUpButton" android:contentDescription="@string/bouton_retour"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
