--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -5,10 +5,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LauncherActivity" android:id="@+id/launcherLayout">
+        tools:context=".LauncherActivity" android:id="@+id/launcherLayout"
+        android:background="@color/colorBackground">
 
     <TextView
-            android:text="Launcher"
+            android:text="@string/launcher"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
