--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SignInActivity">
+        tools:context=".SignInActivity"
+        android:background="@color/colorBackground">
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,4 +36,13 @@
             app:layout_constraintTop_toBottomOf="@+id/passwordContainerIn"
             app:layout_constraintStart_toStartOf="@+id/passwordContainerIn"
             app:layout_constraintEnd_toEndOf="@+id/passwordContainerIn"/>
+    <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="60dp" app:srcCompat="@android:drawable/ic_menu_revert"
+            android:id="@+id/returnSignInButton"
+            android:background="@color/colorBackground" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0" android:scaleType="fitCenter" android:contentDescription="@string/bouton_retour"/>
 </android.support.constraint.ConstraintLayout>
