--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -5,7 +5,72 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".CreateActivity"
+        tools:context=".JoinActivity"
         android:background="#581305">
-
+    <TextView
+            android:text="@string/creer_une_partie"
+            android:layout_width="264dp"
+            android:layout_height="59dp"
+            android:id="@+id/textView3" android:textStyle="bold"
+            android:textAlignment="center" android:textColor="@color/cardview_light_background"
+            android:textSize="36sp" android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:text="@string/nombre_de_joueurs"
+            android:layout_width="279dp"
+            android:layout_height="63dp"
+            android:id="@+id/textView4" android:textStyle="bold"
+            android:textAlignment="center" android:textColor="@color/cardview_light_background"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="@+id/partyNameView" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/partyNameView"/>
+    <EditText
+            android:layout_width="313dp"
+            android:layout_height="64dp"
+            android:inputType="textLongMessage|textPersonName"
+            android:ems="10"
+            android:id="@+id/partyNameView"
+            android:textColor="@color/cardview_light_background"
+            android:hint="@string/nom_de_la_partie"
+            android:layout_marginTop="56dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintHorizontal_bias="0.51"/>
+    <ImageButton
+            android:layout_width="47dp"
+            android:layout_height="48dp" app:srcCompat="@android:drawable/button_onoff_indicator_on"
+            android:id="@+id/removeButton"
+            app:layout_constraintStart_toStartOf="@+id/textView4" android:layout_marginStart="56dp"
+            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
+    <ImageButton
+            android:layout_width="53dp"
+            android:layout_height="51dp" app:srcCompat="@android:drawable/ic_input_add"
+            android:id="@+id/addButton"
+            app:layout_constraintStart_toEndOf="@+id/nbPlayerView" android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="@+id/nbPlayerView"
+            app:layout_constraintBottom_toBottomOf="@+id/nbPlayerView"/>
+    <TextView
+            android:layout_width="47dp"
+            android:layout_height="47dp"
+            android:id="@+id/nbPlayerView" android:textSize="36sp"
+            android:textAlignment="center" android:textStyle="bold"
+            android:textColor="@color/cardview_light_background" app:layout_constraintStart_toEndOf="@+id/removeButton"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="@+id/removeButton"
+            app:layout_constraintBottom_toBottomOf="@+id/removeButton" app:layout_constraintVertical_bias="1.0"/>
+    <Button
+            android:text="Retour"
+            android:layout_width="118dp"
+            android:layout_height="59dp"
+            android:id="@+id/returnButton" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"/>
+    <Button
+            android:text="Créer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/createButton" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/nbPlayerView" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
 </android.support.constraint.ConstraintLayout>
