--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -22,18 +22,39 @@
             android:layout_height="63dp"
             android:id="@+id/textView4" android:textStyle="bold"
             android:textAlignment="center" android:textColor="@color/cardview_light_background"
-            android:textSize="24sp" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="@+id/editText" android:layout_marginTop="56dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText"/>
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="@+id/partyNameView" android:layout_marginTop="56dp"
+            app:layout_constraintTop_toBottomOf="@+id/partyNameView"/>
     <EditText
             android:layout_width="313dp"
             android:layout_height="64dp"
             android:inputType="textLongMessage|textPersonName"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/partyNameView"
             android:textColor="@color/cardview_light_background"
             android:hint="@string/nom_de_la_partie"
             android:layout_marginTop="76dp"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView3"/>
+    <ImageButton
+            android:layout_width="47dp"
+            android:layout_height="48dp" app:srcCompat="@android:drawable/button_onoff_indicator_on"
+            android:id="@+id/removeButton"
+            app:layout_constraintStart_toStartOf="@+id/textView4" android:layout_marginStart="56dp"
+            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
+    <ImageButton
+            android:layout_width="53dp"
+            android:layout_height="51dp" app:srcCompat="@android:drawable/ic_input_add"
+            android:id="@+id/addButton"
+            app:layout_constraintStart_toEndOf="@+id/nbPlayerView" android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="@+id/nbPlayerView" app:layout_constraintBottom_toBottomOf="@+id/nbPlayerView"/>
+    <TextView
+            android:layout_width="47dp"
+            android:layout_height="47dp"
+            android:id="@+id/nbPlayerView" android:textSize="36sp"
+            android:textAlignment="center" android:textStyle="bold"
+            android:textColor="@color/cardview_light_background" app:layout_constraintStart_toEndOf="@+id/removeButton"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="@+id/removeButton"
+            app:layout_constraintBottom_toBottomOf="@+id/removeButton" app:layout_constraintVertical_bias="1.0"/>
 </android.support.constraint.ConstraintLayout>
