--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#581305</color>
+    <color name="colorPrimaryDark">#000</color>
+    <color name="colorAccent">#F5F5F5</color>
     <color name="colorBlanc">#F5F5F5</color>
     <color name="colorBackground">#581305</color>
 </resources>
