--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,22 +9,25 @@
         android:background="@color/colorBackground">
     <Button
             android:text="@string/sign_in"
-            android:layout_width="wrap_content"
+            android:layout_width="241dp"
             android:layout_height="wrap_content"
             android:id="@+id/signInButton"
-            app:layout_constraintBottom_toTopOf="@+id/signButton"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:textSize="30sp"/>
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="@+id/loginTitle" app:layout_constraintStart_toStartOf="@+id/loginTitle"
+            android:layout_marginTop="105dp" app:layout_constraintTop_toBottomOf="@+id/loginTitle"
+            android:background="@drawable/buttonshape"
+    />
     <Button
             android:text="@string/sign_up"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="239dp"
+            android:layout_height="55dp"
             android:id="@+id/signButton"
+            android:textSize="30sp" android:layout_marginTop="92dp"
+            app:layout_constraintTop_toBottomOf="@+id/signInButton"
+            app:layout_constraintEnd_toEndOf="@+id/signInButton"
             app:layout_constraintStart_toStartOf="@+id/signInButton"
-            app:layout_constraintEnd_toEndOf="@+id/signInButton" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/signInButton" app:layout_constraintHorizontal_bias="0.5"
-            android:textSize="30sp"/>
+            android:background="@drawable/buttonshape"
+    />
     <ImageButton
             android:layout_width="80dp"
             android:layout_height="60dp" app:srcCompat="@android:drawable/ic_menu_revert"
@@ -36,4 +39,12 @@
             app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.0"
             android:background="@color/colorBackground" android:scaleType="fitCenter"
             android:contentDescription="@string/bouton_retour"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/loginTitle"
+            android:textStyle="bold" android:textColor="@color/colorBlanc" android:textSize="36sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="124dp"
+            app:layout_constraintHorizontal_bias="0.5" android:text="@string/login"/>
 </android.support.constraint.ConstraintLayout>
