--- a/app/src/main/res/layout/layout_character.xml
+++ b/app/src/main/res/layout/layout_character.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              android:background="#581305">
     <TextView
@@ -9,10 +10,11 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView7" tools:text="nom de la carte"
             android:textAlignment="center" android:textColor="@color/colorBlanc" android:textSize="46sp"
-            android:layout_marginTop="112dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton3"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"/>
+            app:layout_constraintStart_toStartOf="@+id/imageView3"
+            app:layout_constraintEnd_toEndOf="@+id/imageView3"
+            app:layout_constraintHorizontal_bias="0.475"
+            android:layout_marginEnd="8dp" android:layout_marginTop="80dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,12 +23,11 @@
             android:layout_marginTop="108dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="44dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="44dp"/>
-    <ImageButton
-            android:layout_width="94dp"
-            android:layout_height="78dp" app:srcCompat="?attr/actionModeShareDrawable"
-            android:id="@+id/imageButton3"
-            android:layout_marginTop="88dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
-            app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintHorizontal_bias="0.475"/>
+            android:layout_marginEnd="44dp" app:layout_constraintHorizontal_bias="0.5"/>
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/loup_garou"
+            android:id="@+id/imageView3"
+            app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
+            android:layout_marginTop="59dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
 </android.support.constraint.ConstraintLayout>
