--- a/app/src/main/res/layout/activity_user_settings.xml
+++ b/app/src/main/res/layout/activity_user_settings.xml
@@ -5,6 +5,30 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".UserSettingsActivity">
+        tools:context=".UserSettingsActivity"
+        android:background="@color/colorBackground">
 
+    <com.mikhaellopez.circularimageview.CircularImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/icon_avatar"
+            app:civ_border_color="#FF5722"
+            app:civ_border_width="4dp"
+            app:civ_shadow="true"
+            app:civ_shadow_radius="0"
+            app:civ_shadow_color="#8BC34A" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_bias="0.19" android:id="@+id/avatarView"/>
+    <com.mikhaellopez.circularimageview.CircularImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/icon_settings"
+            app:civ_border_color="#000000"
+            app:civ_border_width="1dp"
+            app:civ_shadow="true"
+            app:civ_shadow_radius="0"
+            app:civ_shadow_color="#8BC34A"
+            app:layout_constraintEnd_toEndOf="@+id/avatarView"
+            app:layout_constraintBottom_toBottomOf="@+id/avatarView" android:id="@+id/settingsView"/>
 </android.support.constraint.ConstraintLayout>
