--- a/app/src/main/res/layout/layout_character.xml
+++ b/app/src/main/res/layout/layout_character.xml
@@ -25,8 +25,8 @@
             android:layout_marginStart="44dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="44dp" app:layout_constraintHorizontal_bias="0.5"/>
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/loup_garou"
+            android:layout_width="209dp"
+            android:layout_height="216dp" app:srcCompat="@drawable/loup_garou"
             android:id="@+id/imageView3"
             app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
             android:layout_marginTop="59dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
