--- a/app/src/main/res/layout/activity_user_settings.xml
+++ b/app/src/main/res/layout/activity_user_settings.xml
@@ -16,10 +16,11 @@
             app:civ_border_width="4dp"
             app:civ_shadow="true"
             app:civ_shadow_radius="0"
-            app:civ_shadow_color="#8BC34A" app:layout_constraintTop_toTopOf="parent"
+            app:civ_shadow_color="#8BC34A"
+            android:id="@+id/avatarView" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/pseudoText" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.19" android:id="@+id/avatarView"/>
+    />
     <com.mikhaellopez.circularimageview.CircularImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -31,4 +32,26 @@
             app:civ_shadow_color="#8BC34A"
             app:layout_constraintEnd_toEndOf="@+id/avatarView"
             app:layout_constraintBottom_toBottomOf="@+id/avatarView" android:id="@+id/settingsView"/>
+    <TextView
+            android:text="Pseudo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/pseudoText" android:textColor="@android:color/white"
+            android:textSize="30sp"
+            app:layout_constraintTop_toBottomOf="@+id/avatarView" app:layout_constraintBottom_toTopOf="@+id/saveButton"
+            app:layout_constraintEnd_toEndOf="@+id/avatarView" app:layout_constraintStart_toStartOf="@+id/avatarView"/>
+    <Button
+            android:text="Sauvegarder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/saveButton"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/pseudoText"
+            app:layout_constraintStart_toStartOf="@+id/pseudoText" app:layout_constraintEnd_toEndOf="@+id/pseudoText"/>
+    <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_edit"
+            android:id="@+id/editPseudoButton"
+            android:background="@color/colorBackground" android:tint="@android:color/white"
+            app:layout_constraintTop_toTopOf="@+id/pseudoText" app:layout_constraintBottom_toBottomOf="@+id/pseudoText"
+            app:layout_constraintStart_toEndOf="@+id/pseudoText" android:layout_marginStart="8dp"/>
 </android.support.constraint.ConstraintLayout>
