--- a/app/src/main/res/layout/fragment_lobby_view_row.xml
+++ b/app/src/main/res/layout/fragment_lobby_view_row.xml
@@ -15,8 +15,7 @@
             android:textSize="30sp"
             android:textColor="@android:color/white"
             android:layout_marginTop="12dp" android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
             android:textAlignment="textStart"/>
     <TextView
             android:text=""
@@ -26,9 +25,9 @@
             android:textSize="18sp" android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textAlignment="textStart"
-            android:layout_marginEnd="264dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameText" app:layout_constraintVertical_bias="0.0"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="@+id/nameText"/>
     <View
             android:id="@+id/divider"
             android:layout_width="395dp"
