--- a/app/src/main/res/layout/fragment_player_view_row.xml
+++ b/app/src/main/res/layout/fragment_player_view_row.xml
@@ -4,30 +4,19 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
-                                             tools:context=".LobbyViewRowFragment" android:id="@+id/recyclerLayout"
+                                             tools:context=".PlayerViewRowFragment" android:id="@+id/recyclerLayout"
                                              android:background="#444">
 
     <TextView
             android:layout_width="223dp"
             android:layout_height="52dp"
-            android:text="" android:id="@+id/pseudoText"
+            android:text="coucou" android:id="@+id/pseudoText"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="30sp"
             android:textColor="@android:color/white"
             android:layout_marginTop="12dp" android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
             android:textAlignment="textStart"/>
-    <TextView
-            android:text=""
-            android:layout_width="130dp"
-            android:layout_height="42dp"
-            android:id="@+id/nbPlayerText"
-            android:textSize="18sp" android:textColor="@android:color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textAlignment="textStart"
-            app:layout_constraintTop_toBottomOf="@+id/pseudoText" app:layout_constraintVertical_bias="0.0"
-            android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="@+id/pseudoText"/>
     <View
             android:id="@+id/divider"
             android:layout_width="395dp"
@@ -39,7 +28,7 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintVertical_bias="1.0" app:layout_constraintHorizontal_bias="0.0"/>
     <Button
-            android:text="@string/rejoindre"
+            android:text="@string/exclure"
             android:layout_width="125dp"
             android:layout_height="77dp"
             android:id="@+id/joinButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
