--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -1,28 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-            android:radius="15dp"
-    />
-    <gradient
-            android:angle="315"
-            android:centerX="35%"
-            android:centerColor="#FFFFFF"
-            android:startColor="#E8E8E8"
-            android:endColor="#FDFAFF"
-            android:type="linear"
-    />
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <corners android:radius="15dp"/>
+    <solid
+            android:color="@color/colorPrimaryDark"/>
+
     <padding
-            android:left="0dp"
-            android:top="0dp"
-            android:right="0dp"
-            android:bottom="0dp"
-    />
-    <size
-            android:width="270dp"
-            android:height="60dp"
-    />
+        android:left="10dp"
+        android:right="10dp"/>
+    <size android:width="240dp"
+          android:height="50dp"/>
     <stroke
-            android:width="3dp"
-            android:color="#878787"
+            android:width="1dp"
+            android:color="@color/blanc_casse"
     />
 </shape>
