--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,35 +6,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".HomeActivity"
-        android:background="#581305">
+        android:background="@drawable/accueil_background1">
 
-    <TextView
-            android:text="@string/accueil"
-            android:layout_width="248dp"
-            android:layout_height="63dp"
-            android:id="@+id/textView" android:textSize="52sp"
-            android:textAlignment="center" android:textStyle="bold"
-            android:textColor="@color/cardview_light_background" android:layout_marginTop="88dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintEnd_toEndOf="parent"/>
-    <Button
-            android:text="@string/creer_une_partie"
-            android:layout_width="305dp"
-            android:layout_height="77dp"
-            android:id="@+id/createButton" android:textStyle="bold"
-            android:textAlignment="center" android:textSize="24sp" android:layout_marginTop="100dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
-            app:layout_constraintHorizontal_bias="0.491"/>
     <Button
             android:text="@string/rejoindre"
-            android:layout_width="305dp"
-            android:layout_height="77dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/joinButton" android:textStyle="bold"
-            android:textAlignment="center" android:textSize="24sp" android:layout_marginTop="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/createButton"
-            app:layout_constraintStart_toStartOf="@+id/createButton"
-            app:layout_constraintEnd_toEndOf="@+id/createButton"
+            android:textAlignment="center" android:textSize="18sp"
+            android:background="@drawable/buttonshape"
+            android:textColor="@color/blanc_casse"
+            android:layout_marginBottom="64dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:text="@string/accueil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" android:textSize="70sp"
+            android:textAlignment="center" android:textStyle="bold"
+            android:textColor="@color/blanc_casse" android:layout_marginTop="132dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.514" app:layout_constraintEnd_toEndOf="parent"
+            android:textAllCaps="false" android:textAppearance="@style/TextAppearance.AppCompat"
+            android:shadowDx="2" android:shadowDy="2" android:shadowColor="@color/colorPrimaryDark"
+            android:shadowRadius="75"/>
+    <Button
+            android:text="@string/creer_une_partie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/createButton" android:textStyle="bold"
+            android:textAlignment="center" android:textSize="18sp"
+            android:background="@drawable/buttonshape"
+            android:textColor="@color/blanc_casse"
+            app:layout_constraintEnd_toEndOf="@+id/joinButton" app:layout_constraintStart_toStartOf="@+id/joinButton"
+            android:layout_marginBottom="44dp" app:layout_constraintBottom_toTopOf="@+id/joinButton"
             app:layout_constraintHorizontal_bias="1.0"/>
     <ImageButton
             android:layout_width="60dp"
