--- a/app/src/main/res/layout/pseudo_edit_layout.xml
+++ b/app/src/main/res/layout/pseudo_edit_layout.xml
@@ -8,7 +8,6 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:text="Pseudo"
             android:ems="10"
             android:id="@+id/editPseudoContainer"
             app:layout_constraintEnd_toEndOf="parent"
@@ -16,5 +15,5 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.15"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp" android:hint="Pseudo"/>
 </android.support.constraint.ConstraintLayout>
