--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,28 +6,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".LoginActivity" android:id="@+id/loginLayout"
-        android:background="@color/colorBackground">
+        android:background="@drawable/background3">
     <Button
             android:text="@string/sign_in"
-            android:layout_width="241dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/signInButton"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="@+id/loginTitle" app:layout_constraintStart_toStartOf="@+id/loginTitle"
-            android:layout_marginTop="105dp" app:layout_constraintTop_toBottomOf="@+id/loginTitle"
+            android:textSize="18sp"
             android:background="@drawable/buttonshape"
-    />
+            android:textColor="@color/blanc_casse" android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/signButton" app:layout_constraintEnd_toEndOf="@+id/signButton"
+            android:layout_marginBottom="52dp" app:layout_constraintBottom_toTopOf="@+id/signButton"
+            app:layout_constraintHorizontal_bias="0.0"/>
     <Button
             android:text="@string/sign_up"
-            android:layout_width="239dp"
-            android:layout_height="55dp"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
             android:id="@+id/signButton"
-            android:textSize="30sp" android:layout_marginTop="92dp"
-            app:layout_constraintTop_toBottomOf="@+id/signInButton"
-            app:layout_constraintEnd_toEndOf="@+id/signInButton"
-            app:layout_constraintStart_toStartOf="@+id/signInButton"
+            android:textSize="18sp"
             android:background="@drawable/buttonshape"
-    />
+            android:textColor="@color/blanc_casse" android:textStyle="bold"
+            android:layout_marginBottom="96dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent"/>
     <ImageButton
             android:layout_width="80dp"
             android:layout_height="60dp" app:srcCompat="@android:drawable/ic_menu_revert"
@@ -42,9 +43,13 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/loginTitle"
-            android:textStyle="bold" android:textColor="@color/colorBlanc" android:textSize="46sp"
+            android:textStyle="bold" android:textColor="@color/blanc_casse" android:textSize="56sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="124dp"
-            app:layout_constraintHorizontal_bias="0.5" android:text="@string/login"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="120dp"
+            android:text="@string/login"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="5"/>
 </android.support.constraint.ConstraintLayout>
