--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".SignInActivity"
-        android:background="@color/colorBackground">
+        android:background="@drawable/background3">
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,7 +45,8 @@
             android:topLeftRadius="15dp"
             android:topRightRadius="15dp"
 
-            android:background="@drawable/buttonshape" android:textSize="24sp"/>
+            android:background="@drawable/buttonshape" android:textSize="18sp" android:textColor="@color/blanc_casse"
+            android:textStyle="bold"/>
     <ImageButton
             android:layout_width="80dp"
             android:layout_height="60dp" app:srcCompat="@android:drawable/ic_menu_revert"
