Cards not duplicated anymore

--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -15,13 +15,13 @@
             android:id="@+id/LaunchText"
             android:textSize="30sp" android:textColor="@android:color/white" android:textStyle="bold|italic"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Cards" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/launcherCard" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"/>
     <ImageView
             android:src="@drawable/loup_garou"
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:id="@+id/Cards"
+            android:id="@+id/launcherCard"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
