--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,49 +7,70 @@
         android:layout_height="match_parent"
         tools:context=".SignUpActivity"
         android:background="@drawable/background3">
-    <ImageButton
-            android:layout_width="80dp"
-            android:layout_height="60dp" app:srcCompat="@android:drawable/ic_menu_revert"
-            android:background="@color/colorBackground" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.0" android:scaleType="fitCenter"
-            android:id="@+id/returnSignUpButton" android:contentDescription="@string/bouton_retour"/>
     <EditText
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:id="@+id/emailContainerUp"
             android:hint="@string/adresse_mail"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/passwordContainerUp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:inputType="textWebEmailAddress" android:textSize="24sp" android:textColor="@color/colorBlanc"
-            android:textColorLink="@color/colorBlanc" android:textColorHint="@color/colorBlanc"/>
+            android:inputType="textWebEmailAddress" android:textSize="18sp" android:textColor="@color/colorBlanc"
+            android:textColorLink="@color/colorBlanc" android:textColorHint="@color/colorBlanc"
+            android:textColorHighlight="@color/colorBlanc"
+            android:background="@drawable/edittextshape" app:layout_constraintHorizontal_bias="0.495"
+            android:layout_marginTop="180dp" android:layout_width="wrap_content"/>
+
     <EditText
             android:layout_width="wrap_content"
-            android:layout_height="46dp"
-            android:inputType="textPassword"
+            android:layout_height="wrap_content"
             android:ems="10"
-            android:id="@+id/passwordContainerUp"
             android:hint="@string/password"
+            android:id="@+id/passwordContainerUp"
             app:layout_constraintTop_toBottomOf="@+id/emailContainerUp"
-            app:layout_constraintBottom_toTopOf="@+id/signButton"
             app:layout_constraintStart_toStartOf="@+id/emailContainerUp"
-            app:layout_constraintEnd_toEndOf="@+id/emailContainerUp" android:textColor="@color/colorBlanc"
-            android:textSize="24sp" android:textColorLink="@color/colorBlanc"
-            android:textColorHighlight="@color/colorBlanc" android:textColorHint="@color/colorBlanc"/>
+            app:layout_constraintEnd_toEndOf="@+id/emailContainerUp" android:inputType="textPassword"
+            android:textSize="18sp" android:textColor="@color/colorBlanc" android:textColorLink="@color/colorBlanc"
+            android:textColorHint="@color/colorBlanc"
+            android:background="@drawable/edittextshape" android:layout_marginTop="40dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
     <Button
             android:text="@string/sign_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/signButton"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordContainerUp"
             app:layout_constraintStart_toStartOf="@+id/passwordContainerUp"
             app:layout_constraintEnd_toEndOf="@+id/passwordContainerUp"
+            android:bottomRightRadius="15dp"
+            android:bottomLeftRadius="15dp"
+            android:topLeftRadius="15dp"
+            android:topRightRadius="15dp"
 
             android:background="@drawable/buttonshape" android:textSize="18sp" android:textColor="@color/blanc_casse"
-            android:textStyle="bold"/>
+            android:textStyle="bold" app:layout_constraintHorizontal_bias="0.416"
+            android:layout_marginTop="104dp" app:layout_constraintTop_toBottomOf="@+id/passwordContainerUp"/>
+    <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="60dp" app:srcCompat="@android:drawable/ic_menu_revert"
+            android:id="@+id/returnSignUpButton"
+            android:background="@color/transparentBackground" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0" android:scaleType="fitCenter"
+            android:contentDescription="@string/bouton_retour"/>
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:srcCompat="@android:drawable/sym_action_email"
+            android:id="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/emailContainerUp"
+            app:layout_constraintBottom_toBottomOf="@+id/emailContainerUp"
+            app:layout_constraintStart_toStartOf="@+id/emailContainerUp" android:layout_marginStart="8dp"/>
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_lock_idle_lock"
+            android:id="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/passwordContainerUp"
+            app:layout_constraintBottom_toBottomOf="@+id/passwordContainerUp"
+            app:layout_constraintStart_toStartOf="@+id/passwordContainerUp" android:layout_marginStart="8dp"/>
 </android.support.constraint.ConstraintLayout>
