--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="dialogButtonText">#F44336</color>
     <color name="colorBackground">#581305</color>
     <color name="blanc_casse">#FBC272</color>
+    <color name="transparentBackground">#00581305</color>
 </resources>
