join lobby design

--- a/app/src/main/res/layout/fragment_lobby_view_row.xml
+++ b/app/src/main/res/layout/fragment_lobby_view_row.xml
@@ -5,11 +5,13 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
                                              tools:context=".LobbyViewRowFragment" android:id="@+id/recyclerLayout"
-                                             android:background="#444">
-
+                                             android:background="@drawable/recycleritemshape"
+                                             android:layout_marginLeft="10dp"
+                                             android:layout_marginRight="10dp"
+                                             android:layout_marginTop="10dp">
     <TextView
-            android:layout_width="223dp"
-            android:layout_height="wrap_content"
+            android:layout_width="224dp"
+            android:layout_height="34dp"
             android:text="" android:id="@+id/pseudoText"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="30sp"
@@ -19,8 +21,8 @@
             android:textAlignment="textStart"/>
     <TextView
             android:text=""
-            android:layout_width="130dp"
-            android:layout_height="42dp"
+            android:layout_width="120dp"
+            android:layout_height="29dp"
             android:id="@+id/nbPlayerText"
             android:textSize="18sp" android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -28,21 +30,13 @@
             app:layout_constraintTop_toBottomOf="@+id/pseudoText" app:layout_constraintVertical_bias="0.0"
             android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="@+id/pseudoText"/>
-    <View
-            android:id="@+id/divider"
-            android:layout_width="395dp"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintVertical_bias="1.0" app:layout_constraintHorizontal_bias="0.0"/>
     <Button
             android:text="@string/rejoindre"
             android:layout_width="125dp"
-            android:layout_height="77dp"
+            android:layout_height="60dp"
             android:id="@+id/joinButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/divider"/>
+            android:background="@drawable/buttonshape" android:textColor="@color/blanc_casse"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
