--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".JoinActivity"
-        android:background="#581305">
+        android:background="@drawable/background3">
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
