--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -6,16 +6,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".JoinActivity"
-        android:background="#581305">
+        android:background="@drawable/background3">
     <TextView
             android:text="@string/creer_une_partie"
             android:layout_width="264dp"
             android:layout_height="59dp"
             android:id="@+id/textView3" android:textStyle="bold"
-            android:textAlignment="center" android:textColor="@color/cardview_light_background"
-            android:textSize="36sp" android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"
+            android:textAlignment="center" android:textColor="@color/blanc_casse"
+            android:textSize="36sp" android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="5"/>
     <TextView
             android:text="@string/nombre_de_joueurs"
             android:layout_width="279dp"
@@ -60,17 +64,11 @@
             app:layout_constraintTop_toTopOf="@+id/removeButton"
             app:layout_constraintBottom_toBottomOf="@+id/removeButton" app:layout_constraintVertical_bias="1.0"/>
     <Button
-            android:text="Retour"
-            android:layout_width="118dp"
-            android:layout_height="59dp"
-            android:id="@+id/returnButton" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"/>
-    <Button
             android:text="Créer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/createButton" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/nbPlayerView" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/buttonshape" android:textColor="@color/blanc_casse"/>
 </android.support.constraint.ConstraintLayout>
