--- a/app/src/main/res/layout/loup_vote_view_row.xml
+++ b/app/src/main/res/layout/loup_vote_view_row.xml
@@ -25,7 +25,7 @@
                     android:id="@+id/avatarPlayerLoup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/rose" app:srcCompat="@drawable/icon_avatar"/>
+                    app:srcCompat="@drawable/icon_avatar"/>
 
             <TextView
                     android:id="@+id/pseudoPlayerLoup"
